--- a/config.json
+++ b/config.json
@@ -1,17 +1,21 @@
 {
-    "sess": [
-        1
-    ],
-    "price": [
-        1,
-        3
-    ],
-    "date": 0,
-    "real_name": [
-    ],
-    "nick_name": "You_Nick_Name",
-    "ticket_num": 2,
-    "damai_url": "https://www.damai.cn/",
-    "target_url": "https://detail.damai.cn/item.htm?id=605517235457&spm=a2oeg.orderdetail.list.dtitle",
-    "browser": 0
+  "sess": [
+    1,
+    2
+  ],
+  "price": [
+    3,
+    4,
+    5
+  ],
+  "date": 0,
+  "real_name": [
+      1,
+      2
+  ],
+  "nick_name": "麦子08hDR",
+  "ticket_num": 2,
+  "damai_url": "https://www.damai.cn/",
+  "target_url": "https://detail.damai.cn/item.htm?spm=a2oeg.search_category.0.0.592428dfheCZpF&id=610046670076&clicktitle=%E5%91%A8%E6%9D%B0%E4%BC%A6%E3%80%90%E5%98%89%E5%B9%B4%E5%8D%8E%E3%80%91%E4%B8%96%E7%95%8C%E5%B7%A1%E5%9B%9E%E6%BC%94%E5%94%B1%E4%BC%9A%E6%B7%B1%E5%9C%B3%E7%AB%99",
+  "browser": 0
 }
